Create command objects and type converters

--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -74,7 +74,7 @@
                                 <h5>URL:</h5>
                             </div>
                             <div class="col-md-3">
-                                <a th:href="${recipe.url}" th:text="${recipe.url.}"></a>
+                                <a th:href="${recipe.url}" th:text="${recipe.url}"></a>
                             </div>
                         </div>
                     </div>
