Implement Recipe CRUD

--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -74,7 +74,7 @@
                                 <h5>URL:</h5>
                             </div>
                             <div class="col-md-3">
-                                <a th:href="${recipe.url}" th:text="${recipe.url}"></a>
+                                <a th:href="${recipe.url}">View original</a>
                             </div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel panel-primary">
+                <div class="panel panel-primary" th:if="${image != null && !image.isEmpty()}">
                     <div class="panel-heading">
                         <h1 class="panel-title">Serving example</h1>
                     </div>
